# hungry

./: pyproject.toml  pytest.ini
admin_service/: __init__.py  main.py
admin_service/api/routes/: __init__.py  admin_users.py  alerts.py  auth.py  dashboard.py  merchants.py  support.py
admin_service/domain/: models.py
backend/: __init__.py  main.py
backend/api/: __init__.py
backend/api/routes/: accounts.py  balance.py  capital.py  charges.py  checkout_sessions.py  climate.py  confirmation_tokens.py  coupons.py  crypto.py  customers.py  disputes.py  events.py  financial_connections.py  identity.py  invoices.py  issuing.py  ledger.py  payment_intents.py  payment_links.py  payment_methods.py  payouts.py  prices.py  products.py  promotion_codes.py  radar.py  refunds.py  reporting.py  revenue_recognition.py  setup_intents.py  subscriptions.py  tax_rates.py  terminal.py  transfers.py  treasury.py  usage.py  webhook_endpoints.py
backend/application/: __init__.py
backend/application/services/: __init__.py  capital_service.py  climate_service.py  confirmation_token_service.py  crypto_service.py  financial_connections_service.py  identity_service.py  issuing_service.py  ledger_service.py  payment_link_service.py  radar_service.py  reporting_service.py  revenue_recognition_service.py  terminal_service.py  treasury_service.py  usage_service.py
backend/domain/: __init__.py  capital.py  climate.py  confirmation_tokens.py  crypto.py  financial_connections.py  identity.py  issuing.py  ledger.py  models.py  payment_links.py  radar.py  reporting.py  revenue_recognition.py  terminal.py  treasury.py  usage.py
backend/infrastructure/: __init__.py  database.py  persistence.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py
frontend/components/: card_element.py  checkout_page.py  payment_form.py  payment_request_button.py
frontend/pages/: __init__.py
frontend/pages/payment_link/: [id].py  __init__.py
frontend/static/css/: payment.css
frontend/static/js/: payment.js
infrastructure/docker/: Dockerfile.admin  Dockerfile.api  Dockerfile.webhook  Dockerfile.worker  docker-compose.dev.yml  docker-compose.yml  nginx.conf
infrastructure/kubernetes/: configmap.yaml  deployment.yaml  secrets.yaml  service.yaml
infrastructure/scripts/: backup.sh  healthcheck.sh  migrate.sh  restore.sh
infrastructure/terraform/: main.tf
shared/: __init__.py  config.py  exceptions.py
shared/logging/: __init__.py  formatters.py  handlers.py  logger.py
shared/models/: __init__.py  address.py  base.py  enums.py  metadata.py  money.py  pagination.py
shared/observability/: __init__.py  health.py  metrics.py  middleware.py  tracing.py
shared/utils/: __init__.py  crypto.py  formatters.py  identifiers.py  secrets.py  validators.py
webhook_service/: __init__.py  main.py
webhook_service/api/: __init__.py
webhook_service/api/routes/: webhooks.py
webhook_service/domain/: __init__.py  models.py
webhook_service/services/: __init__.py  dead_letter_service.py  delivery_service.py  event_builder.py  retry_service.py
worker_service/: __init__.py  celery_app.py  main.py
worker_service/tasks/: __init__.py  invoice_tasks.py  maintenance_tasks.py  payment_tasks.py  payout_tasks.py  reconciliation_tasks.py  report_tasks.py  subscription_tasks.py  webhook_tasks.py
