[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "payment-platform"
version = "1.0.0"
description = "Production-ready payment and financial infrastructure platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Payment Platform Team", email = "team@paymentplatform.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "celery>=5.3.6",
    "httpx>=0.26.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "stripe>=7.10.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "bcrypt>=4.1.0",
    "cryptography>=41.0.0",
    "pyotp>=2.9.0",
    "qrcode>=7.4.0",
    "pillow>=10.2.0",
    "reportlab>=4.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.2.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "pytz>=2024.1",
    "python-dateutil>=2.8.2",
    "phonenumbers>=8.13.0",
    "pycountry>=23.12.0",
    "email-validator>=2.1.0",
    "pydantic-extra-types>=2.4.0",
    "tenacity>=8.2.0",
    "httpcore>=1.0.0",
    "hiredis>=2.3.0",
    "orjson>=3.9.0",
    "ujson>=5.9.0",
    "msgpack>=1.0.7",
    "async-timeout>=4.0.3",
    "anyio>=4.2.0",
    "sniffio>=1.3.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "pyyaml>=6.0.1",
    "toml>=0.10.2",
    "python-dotenv>=1.0.0",
    "web3>=6.15.0",
    "pycryptodome>=3.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pytest-benchmark>=4.0.0",
    "pytest-timeout>=2.2.0",
    "hypothesis>=6.97.0",
    "faker>=22.0.0",
    "freezegun>=1.4.0",
    "responses>=0.24.0",
    "aioresponses>=0.7.0",
    "httpx-mock>=0.2.0",
    "locust>=2.20.0",
    "mypy>=1.8.0",
    "mypy-extensions>=1.0.0",
    "types-redis>=4.6.0",
    "types-python-dateutil>=2.8.19",
    "types-pytz>=2024.1.0",
    "types-PyYAML>=6.0.12",
    "types-toml>=0.10.8",
    "types-requests>=2.31.0",
    "ruff>=0.1.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
    "pre-commit>=3.6.0",
    "detect-secrets>=1.4.0",
    "sqlalchemy-stubs>=0.4",
]

[project.scripts]
payment-platform = "payment_platform.cli:main"
payment-api = "payment_platform.backend.main:run_api"
payment-worker = "payment_platform.worker_service.main:run_worker"
payment-webhook = "payment_platform.webhook_service.main:run_webhook"
payment-admin = "payment_platform.admin_service.main:run_admin"

[project.urls]
Homepage = "https://paymentplatform.com"
Documentation = "https://docs.paymentplatform.com"
Repository = "https://github.com/paymentplatform/payment-platform"
Changelog = "https://github.com/paymentplatform/payment-platform/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["payment_platform"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E", "F", "I", "N", "W", "D", "UP", "ANN", "B", "A", "COM", "C4", "DTZ",
    "T10", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q",
    "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD",
    "PL", "TRY", "FLY", "NPY", "PERF", "RUF"
]
ignore = [
    "ANN101", "ANN102", "ANN401", "D100", "D101", "D102", "D103", "D104",
    "D105", "D106", "D107", "D203", "D213", "COM812", "ISC001"
]
exclude = [
    ".git", ".hg", ".mypy_cache", ".tox", ".venv", "_build", "buck-out",
    "build", "dist", "migrations"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "stripe.*", "celery.*", "redis.*", "boto3.*", "botocore.*",
    "web3.*", "PIL.*", "reportlab.*", "qrcode.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --asyncio-mode=auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
    "security: Security tests",
    "performance: Performance tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["payment_platform"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if settings.DEBUG:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true
skip_covered = true

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101", "B311"]
